# nursing-be

./: .env.example  .gitignore  CLAUDE.md  README.MD  main.py  pyproject.toml
.claude/commands/: deploy.md  dev.md  generate-keys.md  health.md  routes.md
api/: config.py  db.py
api/agent/: classifier.py  prompts.py
api/agent/insight_agent/: agent.py  prompts.py  tool_implementation.py
api/agent/modification_agent/: agent.py  prompts.py  tool_definition.py  tool_implementation.py
api/middleware/: auth.py  error_handler.py
api/models/: chats.py  copilot_actions.py  hospital.py  hospital_rules.py  notification.py  revoked_token.py  roster.py  roster_details.py  shift.py  shift_definition.py  staff.py  user.py  ward.py  ward_occupancy.py  ward_transfer.py
api/router/: chat_router.py  dashboard_router.py  hospital_router.py  login_router.py  roster_router.py  shift_router.py  staff_router.py  user_router.py  ward_occupancy_router.py  ward_router.py  ward_transfer_router.py
api/services/: chat_service.py  dashboard_service.py  generator_pulp.py  hospital_service.py  roster_service.py  shift_service.py  staff_service.py  user_service.py  ward_occupancy_service.py  ward_service.py  ward_transfer_service.py
api/types/: responses.py
api/utils/: cors.py  jwt_auth.py  logger.py  openai_client.py  rate_limit.py
scripts/: generate_jwt_keys.py
